[Folder thumbnailer] Use custom folder icon if set

BUG: 375333

CHANGELOG: Folder thumbnails now respect custom folder icons

Differential Revision: https://phabricator.kde.org/D4222